# GTA_pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
crop_aerial_pipeline/: __init__.py  cli.py  config.py  manifest.py  runner.py
crop_aerial_pipeline/geometry/: __init__.py  backprojection.py  crop_center.py  hole_filling.py  intrinsics.py  rasterizer.py  source_extension.py  virtual_camera.py
crop_aerial_pipeline/io/: __init__.py  discovery.py  image_io.py  paths.py
crop_aerial_pipeline/models/: __init__.py  crop_segmentation.py  depth_estimation.py  model_manager.py  outpainting.py  super_resolution.py
crop_aerial_pipeline/stages/: __init__.py  stage01_validate.py  stage02_initial_depth.py  stage02_super_resolution.py  stage03_crop_mask.py  stage03_depth.py  stage04_ai_outpaint.py  stage04_crop_mask.py  stage05_extended_depth.py  stage05_source_extension.py  stage06_backprojection.py  stage06_extended_crop_mask.py  stage07_backprojection.py  stage07_camera.py  stage08_camera.py  stage08_render.py  stage09_camera_fitting.py  stage09_fill.py  stage10_export.py  stage10_render.py  stage11_fill.py  stage12_post_warp_super_resolution.py  stage13_finalize.py
crop_aerial_pipeline/utils/: __init__.py  hashing.py  logging_utils.py  memory.py  visualization.py
tests/: conftest.py  test_config.py  test_crop_center.py  test_discovery.py  test_manifest_resume.py  test_outpainting.py  test_output_naming.py  test_paths.py
