[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crop_aerial_pipeline"
version = "0.1.0"
description = "Ground-level crop photos -> centered pseudo-aerial views, without diffusion."
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "numpy",
    "opencv-python",
    "Pillow",
    "pandas",
    "tqdm",
    "matplotlib",
]

[project.optional-dependencies]
# Required for Stage 2/5 (depth), Stage 4 (AI outpainting), and Stage 12 (post-warp
# super-resolution). Kept optional at the packaging level because AI_OUTPAINT_ENABLED=False
# / POST_WARP_SUPER_RESOLUTION_ENABLED=False / a mocked DepthEstimator can be used without
# them -- but the *default* PipelineConfig needs all three, so install this extra for a
# normal run.
models = [
    "torch",
    "torchvision",
    "transformers",
    "basicsr",
    "realesrgan",
    "simple-lama-inpainting",
]
dev = [
    "pytest",
]

[project.scripts]
crop-aerial-pipeline = "crop_aerial_pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["crop_aerial_pipeline*"]
